templates/koko.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: koko
  name: koko
spec:
  ports:
  - name: "2222"
    port: 2222
    targetPort: 2222
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    io.kompose.service: koko
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: koko
  name: koko
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: koko
    spec:
      containers:
      - env:
        - name: BOOTSTRAP_TOKEN
          value: 7Q11Vz6R2J6BLAdO
        - name: CORE_HOST
          value: http://core:8080
        image: 'wojiushixiaobai/jms_koko:1.5.4'
        name: jms-koko
        ports:
        - containerPort: 2222
        - containerPort: 5000
        resources: {}
        tty: true
        volumeMounts:
        - mountPath: /opt/koko/data/keys
          name: keys-data
      restartPolicy: Always
      volumes:
      - name: keys-data
        persistentVolumeClaim:
          claimName: keys-data
status: {}
