templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jms-ingress
spec:
  rules:
  - host: jms.apps.south.fit2cloud.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
